--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <table cellspacing="10">
       <tr>
-        <td><img src="Liza.jpg" alt="Liza Kovalenko"></td>
+        <td><img src="Elephant.jpg" alt="Temp Pfp"></td>
         <td> <h1>Utkrist Jaiswal</h1>
           <p>Student at <em><strong><a href="https://kiit.ac.in/">KIIT</a></strong></em></p>
           <p>I am an aspiring game developer, and a beginner in Web Development</p>
