--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <title>Utkrist's Personal Site</title>
+    <link rel="stylesheet" href="CSS/styles.css">
   </head>
 
 
   <body>
     <table cellspacing="10">
       <tr>
-        <td><img src="Elephant.jpg" alt="Temp Pfp"></td>
-        <td> <h1>Utkrist Jaiswal</h1>
+        <td><img class="Main-Image" src="Images/Elephant.png" alt="Elephant"></td>
+        <td> <h1 class="Name">Utkrist Jaiswal</h1>
           <p>Student at <em><strong><a href="https://kiit.ac.in/">KIIT</a></strong></em></p>
           <p>I am an aspiring game developer, and a beginner in Web Development</p>
         </td>
@@ -23,10 +24,9 @@
 
     <h3>Education</h3>
     <ul>
-        <li>10th from SJBHS</li>
-        <li>12th From Jain College</li>
+      <li>St. Joseph's Boys' High School, 2018</li>
+      <li>Jain College, 2021</li>
     </ul>
-
 
     <hr>
 
@@ -39,19 +39,23 @@
       <tbody>
         <tr>
           <td>2007-2013</td>
-          <td>St. Joseph's Boys' High School</td>
+          <td>St. Joseph's Boys' High School, Bangalore</td>
         </tr>
         <tr>
           <td>2013-2015</td>
-          <td>Birla Public School</td>
+          <td>Birla Public School, Doha, Qatar</td>
         </tr>
         <tr>
           <td>2015-2018</td>
-          <td>St. Joseph's Boys' High School</td>
+          <td>St. Joseph's Boys' High School, Bangalore</td>
         </tr>
         <tr>
-          <td>2019</td>
-          <td>Jain College</td>
+          <td>2019-2021</td>
+          <td>Shri Bhagawan Mahaveer Jain College V.V.Puram, Bangalore</td>
+        </tr>
+        <tr>
+          <td>2021-Present</td>
+          <td>Kalinga Institute of Industrial Technology</td>
         </tr>
       </tbody>
     </table>
